# saas-cookie

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Makefile  PLAN_AUTH_TENANT.md  README.md  RELEASE.md  SECURITY.md  SETUP.md  docker-compose.yml  new-project.sh
backend/: .env.example  Dockerfile  Makefile  Procfile  START.md  conftest.py  pyproject.toml
backend/apps/authentication/: adapter.py  serializers.py  urls.py  views.py
backend/apps/authentication/tests/: test_auth.py  test_email_verification.py  test_registration.py
backend/apps/core/: admin.py  apps.py  exceptions.py  features.py  middleware.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_auditlog_tenant.py
backend/apps/core/tests/: test_audit.py  test_features.py  test_seed.py  test_views.py
backend/apps/notifications/: admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/subscriptions/: admin.py  apps.py  capabilities.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py  webhooks.py
backend/apps/teams/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/tenants/: admin.py  middleware.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/utils/: audit.py  email.py  health.py  permissions.py  throttling.py  turnstile.py
docs/: ARCHITECTURE.md  (+5 more)
(+256 files in other folders)
